--- a/networking/kube-flannel.yml
+++ b/networking/kube-flannel.yml
@@ -166,7 +166,7 @@ spec:
       serviceAccountName: flannel
       initContainers:
       - name: install-cni-plugin
-        image: registry:5000/rancher/mirrored-flannelcni-flannel-cni-pluginv1.0.0
+        image: rancher/mirrored-flannelcni-flannel-cni-plugin:v1.0.0
         command:
         - cp
         args:
@@ -177,7 +177,7 @@ spec:
         - name: cni-plugin
           mountPath: /opt/cni/bin
       - name: install-cni
-        image: registry:5000/coreos/flannel:v0.15.1
+        image: quay.io/coreos/flannel:v0.15.1
         command:
         - cp
         args:
@@ -191,7 +191,7 @@ spec:
           mountPath: /etc/kube-flannel/
       containers:
       - name: kube-flannel
-        image: registry:5000/coreos/flannel:v0.15.1
+        image: quay.io/coreos/flannel:v0.15.1
         command:
         - /opt/bin/flanneld
         args:
