Fix some offline issues

--- a/kubeconfig.yml.in
+++ b/kubeconfig.yml.in
@@ -31,7 +31,7 @@ etcd:
     dataDir: /var/lib/etcd
 imageRepository: registry:5000
 kind: ClusterConfiguration
-kubernetesVersion: 1.22.8
+kubernetesVersion: __SEMVER__
 networking:
   podSubnet: 10.244.0.0/16   # --pod-network-cidr
   dnsDomain: cluster.local
